--- a/Novera/Source/Pages/Common/ForgotPassword/ForgotPasswordPage.xaml
+++ b/Novera/Source/Pages/Common/ForgotPassword/ForgotPasswordPage.xaml
@@ -126,7 +126,7 @@ IsRunning="False" IsVisible="False" Color="white"
 
             <Label TextColor="{StaticResource LoginText}"
        FontSize="18"
-       Text="Contact"
+       Text="{x:Static strings:language.e5502006}"
        HorizontalOptions="CenterAndExpand">
                 <Label.GestureRecognizers>
                     <TapGestureRecognizer Tapped="OnContactTapped" />
