--- a/Novera/Source/Pages/Common/Login/LoginPage.xaml
+++ b/Novera/Source/Pages/Common/Login/LoginPage.xaml
@@ -135,14 +135,14 @@
                     <FormattedString>
                         <Span Text="Don't have an account?   "
                               TextColor="{StaticResource EntryText}" />
-                        <Span Text="Create now"
+                        <Span Text="{x:Static strings:language.e5701010}"
                               TextColor="{StaticResource LoginText}" />
                     </FormattedString>
                 </Label.FormattedText>
             </Label>
             <Label TextColor="{StaticResource LoginText}"
                    FontSize="18"
-                   Text="Contact"
+                   Text="{x:Static strings:language.e5502006}"
                    HorizontalOptions="CenterAndExpand">
                 <Label.GestureRecognizers>
                     <TapGestureRecognizer Tapped="OnContactTapped" />
