--- a/Novera/Source/Pages/Common/LanguageSelection/LanguageSelectionPage.xaml
+++ b/Novera/Source/Pages/Common/LanguageSelection/LanguageSelectionPage.xaml
@@ -45,26 +45,26 @@
                 <GridItemsLayout Orientation="Vertical" Span="3" />
             </CollectionView.ItemsLayout>
                     <CollectionView.ItemTemplate>
-                        <DataTemplate>
-                            <Frame BorderColor="{StaticResource LoginText}"    
-                                CornerRadius="5" Padding="10,10,10,10" Margin="10,20,10,0"
-                                BackgroundColor="{StaticResource Transparent}">                                       
-                                <VerticalStackLayout>
-                            
-                                    <!-- Image -->
-                                    <Image Source="{Binding Icon}" />
-                                    
-                                    <Label Text="{Binding Name}" 
-                                        Style="{StaticResource Font12LabelAppleGothic}"
-                                        TextColor="{StaticResource LabelColor}"
-                                        HorizontalTextAlignment="Center"
-                                        VerticalOptions="Center" HorizontalOptions="Center" Margin="0,0,0,0"/>
-                                </VerticalStackLayout>
-                            </Frame>
-                           
+                    <DataTemplate>
+                        <Frame BorderColor="{StaticResource LoginText}"    
+           CornerRadius="5" Padding="10,10,10,10" Margin="10,20,10,0"
+           BackgroundColor="{StaticResource Transparent}">
+                            <Frame.GestureRecognizers>
+                                <TapGestureRecognizer Tapped="OnFrameTapped" />
+                            </Frame.GestureRecognizers>
+                            <VerticalStackLayout>
+                                <!-- Image -->
+                                <Image Source="{Binding Icon}" />
+                                <Label Text="{Binding Name}" 
+                   Style="{StaticResource Font12LabelAppleGothic}"
+                   TextColor="{StaticResource LabelColor}"
+                   HorizontalTextAlignment="Center"
+                   VerticalOptions="Center" HorizontalOptions="Center" Margin="0,0,0,0"/>
+                            </VerticalStackLayout>
+                        </Frame>
+                    </DataTemplate>
 
-                        </DataTemplate>
-                    </CollectionView.ItemTemplate>
+                </CollectionView.ItemTemplate>
         </CollectionView>
         </VerticalStackLayout>
         <Button Text="{x:Static strings:language.e6101014}"
