--- a/Novera/Source/Pages/Crm/Email/Compose/ComposeEmailPage.xaml
+++ b/Novera/Source/Pages/Crm/Email/Compose/ComposeEmailPage.xaml
@@ -10,7 +10,8 @@
              BackgroundImageSource="top_cloud_straight"
              Shell.FlyoutBehavior="Disabled">
             <Grid RowDefinitions= "Auto,Auto,Auto,*,Auto,Auto">
-                <Grid Grid.Row="0" Padding="16" VerticalOptions="Start">
+
+        <Grid Grid.Row="0" Padding="16" VerticalOptions="Start">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="*" />
@@ -24,8 +25,9 @@
                         Style="{StaticResource Font18Label}"
                         Placeholder="Your email" 
                         VerticalOptions="Center" />
-            
-                    <BoxView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" HeightRequest="1" Color="White" VerticalOptions="End" />
+
+
+            <BoxView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" HeightRequest="1" Color="White" VerticalOptions="End" />
                 </Grid>
                 <Grid Grid.Row="1" Padding="16" VerticalOptions="Start">
                     <Grid.ColumnDefinitions>
@@ -100,7 +102,11 @@
                     <Frame BackgroundColor="{StaticResource EditorBackgroundBlue}" BorderColor="{StaticResource LoginText}" CornerRadius="5"  Margin="0,0,0,5">
                         <Editor TextColor="White" FontSize="20" AutoSize="Disabled" x:Name="bodyEditor"></Editor>
                     </Frame>
-                </Grid>
+            <ActivityIndicator x:Name="loader" IsRunning="False" IsVisible="False" Color="White" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" 
+                  
+                   />
+
+        </Grid>
 
         <ScrollView Grid.Row="4" Orientation="Horizontal" Margin="12,0,12,10">
             <Frame BackgroundColor="Transparent" BorderColor="Transparent" CornerRadius="5"
@@ -128,7 +134,9 @@
                             Margin="5" />
                 </Grid>
 
-      
+        
+
+
 
     </Grid>
 </ContentPage>
