--- a/Novera/Source/Pages/Crm/Email/Inbox/InboxPage.xaml
+++ b/Novera/Source/Pages/Crm/Email/Inbox/InboxPage.xaml
@@ -54,7 +54,11 @@ IsRunning="False" IsVisible="False" Color="white"
                                     </Frame.GestureRecognizers>
                                     <Grid ColumnDefinitions="Auto,*, Auto" >
                                             <Frame BackgroundColor="Orange" Margin="5, 0, 0 ,0" Grid.Column= "0" WidthRequest="34" HeightRequest="34" CornerRadius="17" Padding="5" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
-                                            <Label Text="{Binding sender, Converter={StaticResource FirstCharacterConverter}}"  TextColor="White" HorizontalOptions="CenterAndExpand"/>
+                                            <Label x:Name="SenderLabel" Text="{Binding sender, Converter={StaticResource FirstCharacterConverter}}"  TextColor="White" HorizontalOptions="CenterAndExpand"/>
+                                            <Frame.GestureRecognizers>
+                                                <TapGestureRecognizer Tapped="MultiSelectionTap" />
+                                            </Frame.GestureRecognizers>
+
                                         </Frame>
                                         
                                         
