--- a/Novera/Source/Pages/Crm/Email/Inbox/InboxPage.xaml
+++ b/Novera/Source/Pages/Crm/Email/Inbox/InboxPage.xaml
@@ -18,10 +18,24 @@
                 CornerRadius="5" Padding="2">
                 <Grid ColumnDefinitions="*,Auto">
                     <Entry Placeholder="Search in mail" PlaceholderColor="{StaticResource LoginText}"
-                           Style="{StaticResource Font14LabelAppleGothic}" TextColor="{StaticResource EntryTextColorWhite}" />
-                    <Image Grid.Column="1" Source="email_search" HeightRequest="25" WidthRequest="25" Aspect="AspectFill" Margin="10,0,10,0"/>
+                           Style="{StaticResource Font14LabelAppleGothic}" TextColor="{StaticResource EntryTextColorWhite}" x:Name="Search" />
+
+                    <Label Text=""
+       Style="{StaticResource Font14LabelAppleGothic}" TextColor="{StaticResource EntryTextColorWhite}" x:Name="emailsCount" IsVisible="false" FontSize="20" Margin="10,0,0,0"  />
+
+
+
+                    <Image Grid.Column="1" Source="email_search" HeightRequest="25" WidthRequest="25" Aspect="AspectFill" Margin="10,0,10,0"
+                           x:Name="image"
+                           >
+                        <Image.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="image_search_clicked" />
+                        </Image.GestureRecognizers>
+
+
+                    </Image>
                 </Grid>
-                
+
                 
             </Frame>
 
