--- a/Novera/Source/Pages/Crm/Email/Drafts/DraftPage.xaml
+++ b/Novera/Source/Pages/Crm/Email/Drafts/DraftPage.xaml
@@ -16,7 +16,9 @@
                 CornerRadius="5" Padding="2">
                 <Grid ColumnDefinitions="*,Auto">
                     <Entry Placeholder="Search in mail" PlaceholderColor="{StaticResource LoginText}"
-                           Style="{StaticResource Font14LabelAppleGothic}" TextColor="{StaticResource EntryTextColorWhite}" />
+                           Style="{StaticResource Font14LabelAppleGothic}" TextColor="{StaticResource EntryTextColorWhite}" 
+                           Completed="SearchClicked" x:Name="Search"
+                           />
                     <Image Grid.Column="1" Source="email_search" HeightRequest="25" WidthRequest="25" Aspect="AspectFill" Margin="10,0,10,0"/>
                 </Grid>
             </Frame>
