--- a/Novera/Source/Pages/Crm/Email/Inbox/InboxPage.xaml
+++ b/Novera/Source/Pages/Crm/Email/Inbox/InboxPage.xaml
@@ -18,7 +18,9 @@
                 CornerRadius="5" Padding="2">
                 <Grid ColumnDefinitions="*,Auto">
                     <Entry Placeholder="Search in mail" PlaceholderColor="{StaticResource LoginText}"
-                           Style="{StaticResource Font14LabelAppleGothic}" TextColor="{StaticResource EntryTextColorWhite}" x:Name="Search" />
+                           Style="{StaticResource Font14LabelAppleGothic}" TextColor="{StaticResource EntryTextColorWhite}" x:Name="Search"
+                           Completed="SearchClicked"
+                           />
 
                     <Label Text=""
        Style="{StaticResource Font14LabelAppleGothic}" TextColor="{StaticResource EntryTextColorWhite}" x:Name="emailsCount" IsVisible="false" FontSize="20" Margin="10,0,0,0"  />
