--- a/Novera/Source/Pages/Crm/Email/Sent/SentMailView.xaml
+++ b/Novera/Source/Pages/Crm/Email/Sent/SentMailView.xaml
@@ -16,7 +16,10 @@
                 CornerRadius="5" Padding="2">
                 <Grid ColumnDefinitions="*,Auto">
                     <Entry Placeholder="Search in mail" PlaceholderColor="{StaticResource LoginText}"
-                           Style="{StaticResource Font14LabelAppleGothic}" TextColor="{StaticResource EntryTextColorWhite}" />
+                           Style="{StaticResource Font14LabelAppleGothic}" TextColor="{StaticResource EntryTextColorWhite}" 
+                           Completed="SearchClicked"
+                           x:Name="Search"
+                           />
                     <Image Grid.Column="1" Source="email_search" HeightRequest="25" WidthRequest="25" Aspect="AspectFill" Margin="10,0,10,0"/>
                 </Grid>
             </Frame>
@@ -29,6 +32,8 @@ IsRunning="False" IsVisible="False" Color="white"
                    />
 
                     <ActivityIndicator IsRunning="true" IsVisible="{Binding IsBusy}" Color="white" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" />
+                    
+                    
 
 
                     <CollectionView ItemsSource="{Binding SentEmailList}" BackgroundColor="Transparent" VerticalScrollBarVisibility="Always">
