--- a/Novera/Source/Pages/Crm/Email/Trash/TrashMailView.xaml
+++ b/Novera/Source/Pages/Crm/Email/Trash/TrashMailView.xaml
@@ -16,7 +16,10 @@
                 CornerRadius="5" Padding="2">
                 <Grid ColumnDefinitions="*,Auto">
                     <Entry Placeholder="Search in mail" PlaceholderColor="{StaticResource LoginText}"
-                           Style="{StaticResource Font14LabelAppleGothic}" TextColor="{StaticResource EntryTextColorWhite}" />
+                           Style="{StaticResource Font14LabelAppleGothic}" TextColor="{StaticResource EntryTextColorWhite}" 
+                           Completed="SearchClicked"
+                           x:Name="Search"
+                           />
                     <Image Grid.Column="1" Source="email_search" HeightRequest="25" WidthRequest="25" Aspect="AspectFill" Margin="10,0,10,0"/>
                 </Grid>
             </Frame>
@@ -26,6 +29,9 @@
                         IsRunning="False" IsVisible="False" Color="white"
                    VerticalOptions="Center" HorizontalOptions="Center"
                    />
+                    <ActivityIndicator IsRunning="true" IsVisible="{Binding IsBusy}" Color="white" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" />
+
+
                     <CollectionView ItemsSource="{Binding TrashMailList}" BackgroundColor="Transparent" VerticalScrollBarVisibility="Always">
                         <CollectionView.ItemsLayout>
                                     <GridItemsLayout Orientation="Vertical" VerticalItemSpacing="10" />
