--- a/Novera/Source/Pages/Crm/Email/EmailDetail/EmailDetailPage.xaml
+++ b/Novera/Source/Pages/Crm/Email/EmailDetail/EmailDetailPage.xaml
@@ -44,7 +44,7 @@
           
         </Grid>
                 <ScrollView Grid.Row="2" Orientation="Horizontal" Margin="12,0,12,10">
-    <Frame BackgroundColor="Transparent" BorderColor="Transparent" CornerRadius="5"
+    <Frame BackgroundColor="Transparent" BorderColor="Transparent" 
            x:Name="frameImage" HeightRequest="100"
            >
         <StackLayout x:Name="imageStackLayout" Orientation="Horizontal">
