--- a/Novera/Source/Pages/Crm/Email/EmailDetail/EmailDetailPage.xaml
+++ b/Novera/Source/Pages/Crm/Email/EmailDetail/EmailDetailPage.xaml
@@ -25,11 +25,11 @@
                             TextColor="{StaticResource EntryTextColorWhite}"
                             Style="{StaticResource Font14Label}" />
                     </VerticalStackLayout>
-                    <Image Grid.Column="2" Margin="10, 0, 10 ,0" HorizontalOptions ="End"  x:Name="status_image" >
+                    <Image Grid.Column="2" Margin="10, 0, 10 ,0" HorizontalOptions ="End"  x:Name="status_image" 
+                           HeightRequest="25" WidthRequest="25" Aspect="AspectFill"
+                           >
                 
-                        <Image.GestureRecognizers>
-                            <TapGestureRecognizer Tapped="BackBtnClicked" />
-                        </Image.GestureRecognizers>
+                        
                     </Image>         
                     <Image Grid.Column="3" Margin="10, 0, 10 ,0" HorizontalOptions ="End" Source="email_reply" >
                 
@@ -43,7 +43,10 @@
                         <Editor x:Name="emailDetail" TextColor="{StaticResource EntryTextColorWhite}" AutoSize="Disabled"   Style="{StaticResource Font16Label}"></Editor>
               
             </Frame>
-          
+            <ActivityIndicator x:Name="loader" IsRunning="False" IsVisible="False" Color="White" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" 
+        
+         />
+
         </Grid>
                 <ScrollView Grid.Row="2" Orientation="Horizontal" Margin="-12,-25,0,10">
     <Frame BackgroundColor="Transparent" BorderColor="Transparent" 
